--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="theme-color" content="#317EFB"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <meta name="theme-color" content="#317EFB" />
     <link rel="apple-touch-icon" href="app/icons/calc-maskable950.png">
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
     <title>calulator PWA</title>
 </head>
+
 <body>
 
     <div class="main">
@@ -24,15 +28,9 @@
         </div>
     </div>
 
-    <script>
-        //install PWA on button click
-        //not complete yet
-        const install = document.getElementById('install')
-        install.addEventListener('click',async=>{
-            console.log("clicked");
-        });
-    </script>
+    
     <script src="script.js"></script>
 
 </body>
+
 </html>
