--- a/app/app.html
+++ b/app/app.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#317EFB" />
+    <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="app/icons/calc-maskable950.png">
     <link rel="stylesheet" href="app.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +47,7 @@
                         <span></span>
                     </div>
                 </div>
-                <input type="text" id="display" name="display">
+                <input id="display" placeholder="0" type="text" name="display">
             </div>
             <div class="input">
                 <div class="btn-row">
